Fix focus on safari and firefox

--- a/src/SpeedStack.css
+++ b/src/SpeedStack.css
@@ -452,14 +452,11 @@ button {
 
 .cell:focus {
   outline: none;
-}
-
-.cell:focus-visible {
   background-color: var(--color-bg-tertiary);
   box-shadow: inset 0 0 0 var(--border-width) var(--color-accent);
 }
 
-.cell.clue:focus-visible {
+.cell.clue:focus {
   background-color: var(--color-bg-tertiary);
   box-shadow: none;
 }
